--- a/views/pps/partials/menu.ejs
+++ b/views/pps/partials/menu.ejs
@@ -23,7 +23,7 @@
 				</li>
 			<%} %>
 			<li class="nav-item">
-				<a class="nav-link <%if (pageName == "/my-page/settings") {%><%='active'%><%}%>" href="/my-page/settings">Настройки</a>
+				<a class="nav-link <%if (pageName == "/settings") {%><%='active'%><%}%>" href="/settings">Настройки</a>
 			</li>
 		</ul>
 		<form class="form-inline my-2 my-lg-0 mr-md-4" action="/exit" method="post">
