--- a/views/pps/page_one_val.ejs
+++ b/views/pps/page_one_val.ejs
@@ -8,79 +8,91 @@
 <%- include("partials/menu.ejs") %>
 <div class="wrapper">
     <div class="content container">
-        <% if(!val.valid) {%>
-        <h3 class="text-danger">Данное значение отмечено как неверное</h3>
+        <% if(val) {%>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/my-page/values-kpi">Список выполненных ПЭД</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Просмотр значения</li>
+                </ol>
+            </nav>
+            <% if(!val.valid) {%>
+            <h3 class="text-danger">Данное значение отмечено как неверное</h3>
+                <table class="table">
+                    <tbody>
+                    <tr>
+                        <th scope="row">Проверил</th>
+                        <td><%=val.author_verify_name%>, <%=val.author_verify_position%></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Причина отметки о недействительности</th>
+                        <td><%=val.text_verify%></td>
+                    </tr>
+                    </tbody>
+                </table>
+            <%}%>
+            <h3>Просмотр добавленного значения ПЭД</h3>
             <table class="table">
                 <tbody>
                 <tr>
-                    <th scope="row">Проверил</th>
-                    <td><%=val.author_verify_name%>, <%=val.author_verify_position%></td>
+                    <th scope="row">ПЭД (шифр)</th>
+                    <td><%=val.name_kpi%></td>
                 </tr>
                 <tr>
-                    <th scope="row">Причина отметки о недействительности</th>
-                    <td><%=val.text_verify%></td>
+                    <th scope="row">ПЭД (полное название)</th>
+                    <td><%=val.description%></td>
                 </tr>
+                <tr>
+                    <th scope="row">Дата добавления</th>
+                    <td><%=val.modifydate%></td>
+                </tr>
+                <tr>
+                    <th scope="row">Дата исполнения</th>
+                    <td><%=val.modifystart_date%></td>
+                </tr>
+                <% if(val.type == 2) {%>
+                <tr>
+                    <th scope="row">Тип</th>
+                    <td><%=val.criterion_description%></td>
+                </tr>
+                <%} %>
+                <tr>
+                    <th scope="row">Значение</th>
+                    <td><%=val.value%></td>
+                </tr>
+                <tr>
+                    <th scope="row">Статус</th>
+                    <%if (val.valid) {%>
+                        <td class="text-success">Выполнено</td>
+                    <%}%>
+                    <%if (!val.valid) {%>
+                        <td class="text-danger">Недействительно</td>
+                    <%}%>
+                </tr>
+                <% if (val.link) {%>
+                <tr>
+                    <th scope="row">Ссылка</th>
+                    <td><a href="<%=val.link%>" target="_blank"><%=val.link%></a></td>
+                </tr>
+                <%}%>
+                <% if (val.file) {%>
+                <tr>
+                    <th scope="row">Файл</th>
+                    <td><a href="/upload-file?file=<%=val.file%>" download=""><img src="/img/icons/download.svg" alt="Скачать файл" width="25"></a></td>
+                </tr>
+                <%}%>
+                <% if (val.text) {%>
+                <tr>
+                    <th scope="row">Пояснительная записка</th>
+                    <td><%=val.text%></td>
+                </tr>
+                <%}%>
                 </tbody>
             </table>
         <%}%>
-        <h3>Просмотр добавленного значения ПЭД</h3>
-        <table class="table">
-            <tbody>
-            <tr>
-                <th scope="row">ПЭД (шифр)</th>
-                <td><%=val.name_kpi%></td>
-            </tr>
-            <tr>
-                <th scope="row">ПЭД (полное название)</th>
-                <td><%=val.description%></td>
-            </tr>
-            <tr>
-                <th scope="row">Дата добавления</th>
-                <td><%=val.modifydate%></td>
-            </tr>
-            <tr>
-                <th scope="row">Дата исполнения</th>
-                <td><%=val.modifystart_date%></td>
-            </tr>
-            <% if(val.type == 2) {%>
-            <tr>
-                <th scope="row">Тип</th>
-                <td><%=val.criterion_description%></td>
-            </tr>
-            <%} %>
-            <tr>
-                <th scope="row">Значение</th>
-                <td><%=val.value%></td>
-            </tr>
-            <tr>
-                <th scope="row">Статус</th>
-                <%if (val.valid) {%>
-                    <td class="text-success">Выполнено</td>
-                <%}%>
-                <%if (!val.valid) {%>
-                    <td class="text-danger">Недействительно</td>
-                <%}%>
-            </tr>
-            <% if (val.link) {%>
-            <tr>
-                <th scope="row">Ссылка</th>
-                <td><%=val.link%></td>
-            </tr>
-            <%}%>
-            <% if (val.file) {%>
-            <tr>
-                <th scope="row">Файл</th>
-                <td><a href="/upload-file?file=<%=val.file%>" download=""><img src="/img/icons/download.svg" alt="Скачать файл" width="25"></a></td>
-            </tr>
-            <%}%>
-            <% if (val.text) {%>
-            <tr>
-                <th scope="row">Пояснительная записка</th>
-                <td><%=val.text%></td>
-            </tr>
-            <%}%>
-            </tbody>
-        </table>
+        <% if(!val) {%>
+            <h3 class="text-danger">Страница не найдена:(</h3>
+            <a href="/">Вернуться к сайту</a>
+        <%}%>
     </div>
     <div class="footer">
         <%- include("../partials/footer.ejs") %>
@@ -89,6 +101,5 @@
 </div>
 
 <%- include("partials/scripts.ejs")%>
-<script type="text/javascript" src="./check_form.js"></script>
 </body>
 </html>
