--- a/views/pps/partials/table_posted_values.ejs
+++ b/views/pps/partials/table_posted_values.ejs
@@ -3,7 +3,8 @@
 <%} %>
 <% if(!textErr) {%>
 	<div class="px-sm-3">
-		<h4><%=desc[0].description %></h4>
+		<h5><%=desc[0].name %></h5>
+		<h5><%=desc[0].description %></h5>
 		<hr>
 		<button id="plus" class="btn btn-outline-primary">+ Отметить выполнение</button>
 	</div>
@@ -18,7 +19,7 @@
 						<div class="col-sm-7">
 							<% for(let j = 0; j < desc[0].count_criterion; j++) {%>
 								<div class="form-check">
-									<input type="radio" class="form-check-input" name="radio" id="radio<%=j%>" value=<%=j+""%> required>
+									<input type="radio" class="form-check-input" name="radio" id="radio<%=j%>" value="<%=j%>" required>
 									<label class="form-check-label" for="radio<%=j%>">
 										<%=desc[j].criterion_description %>
 									</label>
@@ -56,6 +57,12 @@
 			<% if(desc[0].indicator_sum) {%>
 				<input type="hidden" name="value" value="1" id="value">
 			<%} %>
+			<div class="form-group row">
+				<label for="link" class="col-sm-3">Ссылка</label>
+				<div class="col-sm-7">
+					<input type="text" name="link" class="form-control" id="link" maxlength="1024">
+				</div>
+			</div>
 			<div class="form-group row">
 				<label for="text" class="col-sm-3">Пояснительная записка</label>
 				<div class="col-sm-7">
