add search by table

--- a/views/change-pps/page-add-pps.ejs
+++ b/views/change-pps/page-add-pps.ejs
@@ -84,7 +84,7 @@
 						</div>
 					</div>
 					<div class="col-sm-1">
-						<a href="#" id="generate-pass"><img src="/img/icons/arrow-repeat.svg" title="сгенерировать" width="28px"></a>
+						<a href="#" id="generate-pass"><img src="/img/icons/arrow-repeat.svg" alt="сгенерировать" title="сгенерировать" width="28px"></a>
 					</div>
 				</div>
 				<button type="submit" class="btn btn-primary btn-lg">Добавить</button>
@@ -100,6 +100,7 @@
 	<%- include("../common/scripts.ejs")%>
 	<script type="text/javascript" src="/plugins/carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
 	<script type="text/javascript" src="/scripts/change-pps/add-pps.js"></script>
+	<script type="text/javascript" src="/scripts/generate-password.js"></script>
 	<script type="text/javascript" src="/scripts/check-form.js"></script>
 </body>
 </html>
