--- a/views/choice-action.ejs
+++ b/views/choice-action.ejs
@@ -54,7 +54,7 @@
                          <a class="list-group-item list-group-item-action" href="/change-pps/add-pps">Добавить сотрудника</a>
                     <%} %>
                      <% if(infoUser.rights.indexOf("change_password_pps") !== -1) {%>
-                        <a class="list-group-item list-group-item-action" href="/change-pps/change-password">Изменить пароль</a>
+                        <a class="list-group-item list-group-item-action" href="/get-pps">Изменить пароль</a>
                       <%} %>
                 <%} %>
                 <% if(infoUser.rights.indexOf("get_all_kpi") !== -1 || infoUser.rights.indexOf("change_kpi") !== -1
