--- a/views/common/menu.ejs
+++ b/views/common/menu.ejs
@@ -73,7 +73,7 @@
 							<a class="dropdown-item" href="/change-pps/add-pps">Добавить сотрудника</a>
 						<%} %>
 						<% if(infoUser.rights.indexOf("change_password_pps") !== -1) {%>
-							<a class="dropdown-item" href="/change-pps/change-password">Изменить пароль</a>
+							<a class="dropdown-item" href="/get-pps">Изменить пароль</a>
 						<%} %>
 					</div>
 				</li>
