--- a/views/page-get-actions-users.ejs
+++ b/views/page-get-actions-users.ejs
@@ -9,16 +9,27 @@
 	<div class="wrapper">
 		<div class="content container-fluid">
 			<form action="" method="get">
-				<p class="namelist">История действий пользователей за
-					<input type="date" name="date" id="date" class="date" value=<%=date%>>
-					<input type="submit" class="buttonmypage" value="Показать">
-				</p>
+				<div class="row">
+					<div class="input-group mb-3 col-sm-6">
+						<div class="input-group-prepend">
+							<span class="input-group-text" id="basic">История действий пользователей за</span>
+						</div>
+						<input type="date" class="form-control" name="date" id="date" aria-label="дата" value=<%=date%> aria-describedby="button">
+						<div class="input-group-append">
+							<button class="btn btn-outline-secondary" type="submit" id="button">Показать</button>
+						</div>
+					</div>
+				</div>
 			</form>
-			<ul class="logs" id="logs">
+			<ul class="list-group" id="logs">
 				<% for(let i = logs.length - 2; i >= 0; i--) {%>
-					<li><%=logs[i]%></li>
+					<li class="list-group-item"><%=logs[i]%></li>
 				<%} %>
 			</ul>
+
+			<% if(logs.length == 1) {%>
+				<p>Нет действий</p>
+			<%} %>
 		</div>
 		
 		<div class="footer">
