--- a/views/page-settings.ejs
+++ b/views/page-settings.ejs
@@ -31,7 +31,7 @@
                     </div>
                     </div>
                 <div class="form-group row">
-                    <input type="submit" class="btn btn-primary ml-3" id="but-file2" value="Изменить">
+                    <input type="submit" class="btn btn-primary ml-3" value="Изменить">
                 </div>
             </form>
 		</div>
