--- a/views/table-pages/page-table-kpi.ejs
+++ b/views/table-pages/page-table-kpi.ejs
@@ -8,65 +8,71 @@
 	<%- include("../common/menu.ejs") %>
 	<div class="wrapper">
 		<div class="content container-fluid">
-			<h3 class="nametable">Список Показателей эффективности деятельности</h3>
+			<h1>Список Показателей эффективности деятельности</h1>
 			<% if(kpi) {%>
-				<table>
-					<tr class="row1">
-						<th rowspan="2"><h4>Шифр показателя эффективности</h4></th>
-						<th rowspan="2"><h4>Показатель</h4></th>
-						<th rowspan="2"><h4>Критерии оценки эффективности деятельности</h4></th>
-						<th colspan="<%=positions.length%>"><h4>Группы</h4></th>
-					</tr>
-					<tr class="row2">
-						<% for(let i = 0; i < positions.length; i++) {%>
-							<th><h4><%=positions[i]%></h4></th>
-						<%} %>
-					</tr>
-					<% for(let u = 0; u < kpi.length; u++) {%>
-						<% if(kpi[u].length != 0) {%>
-							<tr>
-								<td><%=kpi[u][0].section[0] + "." %></td>
-								<td colspan="<%=positions.length + 2%>" class="namesection">
-									<h4>Раздел <%=(u+1) + ". " + kpi[u][0].section %></h4>
-								</td>
-							</tr>
-							<% let arr = kpi[u]; %>
-							<% for(let i = 0; i < arr.length; i++) {%>
-								<% if(arr[i].type == 1) {%>
-									<tr>
-										<td rowspan="<%=arr[i].count_criterion%>"><%=arr[i].name %></td>
-										<td rowspan="<%=arr[i].count_criterion%>"><%=arr[i].description %></td>
-										<% for(let j = 0; j < arr[i].lines.length; j++) {%>
-											<% if(j != 0) {%>
-												</tr><tr>
-											<%} %>
-											<td><%=arr[i].lines[j].name %></td>
-											<% for(let k = 0; k < positions.length; k++) {%>
-												<td><big><%=arr[i].lines[j].balls[positions[k]] %></big></td>
-											<%} %>
-										<%} %>
-									</tr>
-									<%} %>
-									<% if(arr[i].type == 2) {%>
-									<tr>
-										<td rowspan="<%=(arr[i].count_criterion + 1)%>"><%=arr[i].name %></td>
-										<td colspan="<%=positions.length + 2%>"><%=arr[i].description %></td>
-										</tr>
-										<% for(let j = 0; j < arr[i].lines.length; j++) {%>
+			<div class="table-responsive-md">
+				<table class="table border-color-f table-sm">
+					<thead>
+						<tr class="row1">
+							<th scope="col" rowspan="2">Шифр показателя эффективности</th>
+							<th scope="col" rowspan="2">Показатель</th>
+							<th scope="col" rowspan="2">Критерии оценки эффективности деятельности</th>
+							<th scope="col" colspan="<%=positions.length%>">Группы</th>
+						</tr>
+						<tr class="row2">
+							<% for(let i = 0; i < positions.length; i++) {%>
+								<th scope="col"><%=positions[i]%></th>
+							<%} %>
+						</tr>
+					</thead>
+					<tbody>
+						<% for(let u = 0; u < kpi.length; u++) {%>
+							<% if(kpi[u].length != 0) {%>
+								<tr>
+									<th scope="row"><%=kpi[u][0].section[0] + "." %></th>
+									<td colspan="<%=positions.length + 2%>" class="namesection">
+										<h4>Раздел <%=(u+1) + ". " + kpi[u][0].section %></h4>
+									</td>
+								</tr>
+								<% let arr = kpi[u]; %>
+								<% for(let i = 0; i < arr.length; i++) {%>
+									<% if(arr[i].type == 1) {%>
 										<tr>
-											<td><%=arr[i].lines[j].description %></td>
-											<td><%=arr[i].lines[j].name %></td>
-											<% for(let k = 0; k < positions.length; k++) {%>
-												<td><big><%=arr[i].lines[j].balls[positions[k]] %></big></td>
+											<th scope="row" rowspan="<%=arr[i].count_criterion%>"><%=arr[i].name %></th>
+											<td rowspan="<%=arr[i].count_criterion%>"><%=arr[i].description %></td>
+											<% for(let j = 0; j < arr[i].lines.length; j++) {%>
+												<% if(j != 0) {%>
+													</tr><tr>
+												<%} %>
+												<td><%=arr[i].lines[j].name %></td>
+												<% for(let k = 0; k < positions.length; k++) {%>
+													<td><big><%=arr[i].lines[j].balls[positions[k]] %></big></td>
+												<%} %>
 											<%} %>
+										</tr>
 										<%} %>
-				
-									</tr>
-									<%} %>
+										<% if(arr[i].type == 2) {%>
+										<tr>
+											<th scope="col" rowspan="<%=(arr[i].count_criterion + 1)%>"><%=arr[i].name %></th>
+											<td colspan="<%=positions.length + 2%>"><%=arr[i].description %></td>
+											</tr>
+											<% for(let j = 0; j < arr[i].lines.length; j++) {%>
+											<tr>
+												<td><%=arr[i].lines[j].description %></td>
+												<td><%=arr[i].lines[j].name %></td>
+												<% for(let k = 0; k < positions.length; k++) {%>
+													<td><big><%=arr[i].lines[j].balls[positions[k]] %></big></td>
+												<%} %>
+											<%} %>
+
+										</tr>
+										<%} %>
+								<%} %>
 							<%} %>
 						<%} %>
-					<%} %>
+					</tbody>
 				</table>
+			</div>
 			<%} %>
 			<% if(!kpi) {%>
 			<h4>Нет Показателей эффективности деятельности</h4>
