--- a/views/table-pages/page-table-users.ejs
+++ b/views/table-pages/page-table-users.ejs
@@ -8,29 +8,40 @@
 	<%- include("../common/menu.ejs") %>
 	<div class="wrapper">
 		<div class="content container-fluid">
-			<p> 
-				<h3 class="nametable">Список пользователей</h3>
-			</p>
-			<table style="margin-left: 20px;">
-				<tr>
-					<th><h4>ФИО</h4></th>
-					<th><h4>Логин</h4></th>
-					<th><h4>Роль</h4></th>
-					<th><h4>Должность</h4></th>
-					<th><h4>Факультет</h4></th>
-					<th><h4>Кафедра</h4></th>
-				</tr>
-				<% for(let i = 0; i < users.length; i ++) {%>
-					<tr>
-						<td><%=users[i].name %></td>
-						<td><%=users[i].login %></td>
-						<td><%=users[i].role %></td>
-						<td><%=users[i].position %></td>
-						<td><%=users[i].faculty %></td>
-						<td><%=users[i].department %></td>
-					</tr>
-				<%} %>
-			</table>
+			<h1>Список пользователей</h1>
+			<hr>
+			<div class="table-filters form-group row">
+				<div class="col-sm d-flex">
+					<img src="/img/icons/search.svg" alt="поиск" title="поиск" width="28px">
+					<input type="text" class="form-control ml-sm-3" placeholder="Поиск по ФИО">
+				</div>
+			</div>
+			<div class="table-responsive-md">
+				<table class="table border-color-f">
+					<thead>
+						<tr>
+							<th scope="col"><h4>ФИО</h4></th>
+							<th scope="col"><h4>Логин</h4></th>
+							<th scope="col"><h4>Роль</h4></th>
+							<th scope="col"><h4>Должность</h4></th>
+							<th scope="col"><h4>Факультет</h4></th>
+							<th scope="col"><h4>Кафедра</h4></th>
+						</tr>
+					</thead>
+					<tbody>
+						<% for(let i = 0; i < users.length; i ++) {%>
+							<tr class="table-data">
+								<th scope="row"><%=users[i].name %></th>
+								<td><%=users[i].login %></td>
+								<td><%=users[i].role %></td>
+								<td><%=users[i].position %></td>
+								<td><%=users[i].faculty %></td>
+								<td><%=users[i].department %></td>
+							</tr>
+						<%} %>
+					</tbody>
+				</table>
+			</div>
 		</div>
 		
 		<div class="footer">
@@ -39,6 +50,7 @@
 	</div>
 
 	<%- include("../common/scripts.ejs")%>
+	<script type="text/javascript" src="/scripts/filter-table-by-th.js"></script>
 
 </body>
 </html>
